Pause and play video

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="thirdParty/jquery-3.3.1.slim.min.js"></script>
-    <!--<script src="popup.js"></script>-->
+    <script defer src="thirdParty/jquery-3.3.1.slim.min.js"></script>
+    <script defer src="thirdParty/sweetalert.min.js"></script>
+    <script defer src="popup.js"></script>
 </head>
 <body>
     <div style="width: 200px; height: 200px">
