--- a/extension/options.html
+++ b/extension/options.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>SeizeControlOptions</title>
+
+    <script src="thirdParty/jquery-3.3.1.slim.min.js"></script>
+    <script src="options.js"></script>
 </head>
 <body>
-
+<h1>SeizeControl Options</h1>s
 </body>
 </html>
