--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,11 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< Updated upstream
-    <script defer src="thirdParty/jquery-3.3.1.slim.min.js"></script>
-    <script defer src="thirdParty/sweetalert.min.js"></script>
-    <script defer src="popup.js"></script>
-=======
     <script src="thirdParty/jquery-3.3.1.slim.min.js"></script>
     <script src="popup.js"></script>
 
@@ -65,7 +60,6 @@
     }
 </style> -->
 
->>>>>>> Stashed changes
 </head>
 <body>
     <div style="width: 200px; height: 200px">
@@ -76,6 +70,9 @@
       <label class="switch">
         <span class="slider round"></span>
       </label>
+    </div>
+    <div id = "titleText">
+      <!-- img src -->
     </div>
 </body>
 </html>
