--- a/extension/options.html
+++ b/extension/options.html
@@ -8,6 +8,6 @@
     <script src="options.js"></script>
 </head>
 <body>
-<h1>SeizeControl Options</h1>s
+<h1>SeizeControl Options</h1>
 </body>
 </html>
