--- a/extension/popup.html
+++ b/extension/popup.html
@@ -5,74 +5,96 @@
     <script src="thirdParty/jquery-3.3.1.slim.min.js"></script>
     <script src="popup.js"></script>
 
-<!-- <style>
-    <!-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+    <div id = "switchShit" style = "padding-right: 20px">
+    <style>
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
     }
 
     .switch input {display:none;}
 
     .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
     }
 
     .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
+      position: absolute;
+      content: "";
+      /*height and width of inner circle*/
+      height: 26px;
+      width: 26px;
+      /*positioning of circle within switch*/
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+
+      /*add smooth slide*/
+      -webkit-transition: .4s;
+      transition: .4s;
     }
 
+    /*changes the color to grey when slide*/
     input:checked + .slider {
-    background-color: #2196F3;
+      background-color: #2196F3;
     }
+
 
     input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+      box-shadow: 0 0 1px #2196F3;
     }
 
+    /*moves inner white dot left and right */
     input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-    }slider.round {
-    border-radius: 34px;
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+      border-radius: 34px;
     }
 
     .slider.round:before {
-    border-radius: 50%;
+      border-radius: 50%;
     }
-</style> -->
-
+    </div>
+    </style>
 </head>
 <body>
-    <div style="width: 200px; height: 200px">
-        <button id="pause"></button>
+
+<div style="width: 150px; height: 200px">
+    <div id = "titleText" style = "vertical-align: middle">
+    <h1 style = "font-size: 20px">random shitty stuff</h1>
+      <!-- img src logo here -->
     </div>
-    <div id = "toggle switch tester">
-      <input type="checkbox">
-      <label class="switch">
-        <span class="slider round"></span>
-      </label>
-    </div>
-    <div id = "titleText">
-      <!-- img src -->
-    </div>
+
+    <h2 style = "font-size: 15px; display: inline-block; float: left">Enable</h2>
+
+
+<div id = "autoskipOption" style="display: table; float: left">
+  <label class="container">Autoskip
+  <input type="radio" checked="checked" name="radio">
+  <span class="checkmark"></span>
+  </label>
+  <label class="container">Prompt
+  <input type="radio" name="radio">
+  <span class="checkmark"></span>
+  </label>
+</div>
+
+
+</div>
 </body>
 </html>
