chrome extension drop-down looks kool now :)) -LT

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 
-<div style="width: 150px; height: 200px">
+<div style="width: 150px; height: 150px">
+
 
 
     <div id = "titleText" style = "display: table">
@@ -37,8 +38,8 @@
     </div>
 
 
-    <!--<div id = "autoskipOption" style="display: table; float: left; margin-top: 5px">-->
-        <!--<label class="container"> <h2 style = "font-size: 14px; padding: 0; margin: 0; display: inline-block; vertical-align: right">Autoskip</h2>-->
+<!--<div id="autoskipOption" style="display: table; float: left; margin-top: 10px">-->
+    <!--<label class="container"> <h2 style = "font-size: 14px; padding: 0; margin: 0; display: inline-block; vertical-align: right">Autoskip</h2>-->
             <!--<input type="radio" checked="checked" name="radio" style = "display: inline-block; vertical-align: left">-->
             <!--<span class="checkmark"></span>-->
         <!--</label>-->
@@ -53,7 +54,7 @@
 <!--</div>-->
 <!--</div>-->
 
-     <div id = "autoSkipOption" style = "margin-top: 10px" >
+     <div id = "autoSkipOption" style = "margin-top: 40px"  >
 
         <h2 style = "font-size: 14px; display: inline-block; float: left; padding: 0; margin: 0">Autoskip</h2>
 
@@ -67,13 +68,15 @@
         </div>
     </div>
 
-<div id = "help">
+<div id = "help" style = "margin-top: 70px">
    <h2 style = "font-size: 14px; vertical-align:right; display: inline-block; padding: 0; margin: 0">Help</h2>
 </div>
 
-<div id = "feedback">
+<div id = "feedback" style = "margin-top:10px">
    <h2 style = "font-size: 14px; vertical-align:right; display: inline-block; padding: 0; margin: 0">Feedback</h2>
 </div>
+</div>
+
 </body>
 </html>
 
