remove unnecessary features

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<div style="width: 150px; height: 150px">
+<div style="width: 150px; height: 100px">
 
 
 
@@ -68,13 +68,13 @@
         </div>
     </div>
 
-<div id = "help" style = "margin-top: 70px">
-   <h2 style = "font-size: 14px; vertical-align:right; display: inline-block; padding: 0; margin: 0">Help</h2>
-</div>
+<!--<div id = "help" style = "margin-top: 70px">-->
+   <!--<h2 style = "font-size: 14px; vertical-align:right; display: inline-block; padding: 0; margin: 0">Help</h2>-->
+<!--</div>-->
 
-<div id = "feedback" style = "margin-top:10px">
-   <h2 style = "font-size: 14px; vertical-align:right; display: inline-block; padding: 0; margin: 0">Feedback</h2>
-</div>
+<!--<div id = "feedback" style = "margin-top:10px">-->
+   <!--<h2 style = "font-size: 14px; vertical-align:right; display: inline-block; padding: 0; margin: 0">Feedback</h2>-->
+<!--</div>-->
 </div>
 
 </body>
