--- a/extension/popup.html
+++ b/extension/popup.html
@@ -23,14 +23,14 @@
     </div>
 
 
-    <div id = "enable" style = "margin-top: 10px" >
+    <div style = "margin-top: 10px" >
 
         <h2 style = "font-size: 14px; display: inline-block; float: left; padding: 0; margin: 0">Enable</h2>
 
         <div id = "toggleSwitch" style = "display: inline; float: right" >
 
         <label class="switch">
-            <input type="checkbox">
+            <input id="enable" type="checkbox">
             <span class="slider round"></span>
         </label>
 
